# mpl-nft-machine

./: Anchor.toml
programs/nft-machine/: Cargo.toml
programs/nft-machine/src/: lib.rs
programs/nft-machine/src/processor/: mint.rs
tests/: nft-machine.ts
