[package]
name = "mpl-nft-machine"
version = "1.0.0"
description = "NFT Machine v: programmatic and trustless NFT drops."
authors = ["Jin Bang", "Fullstake developer <topcoder1208@gmail.com>"]
repository = "https://github.com/topcoder1208/mpl-nft-machine"
license = "AGPL-3.0"
edition = "2018"
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
test-bpf = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
arrayref = "0.3.6"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
mpl-token-metadata = { version = "1.2.5", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "1.0.3", features = [
  "no-entrypoint",
] }
anchor-spl = "0.24.2"
solana-program = "1.9.18"
solana-gateway = "0.2.0"

[dev-dependencies]
solana-program-test = "1.9.18"
solana-sdk = "~1.9.18"
anchor-client = "0.24.2"
borsh = "~0.9.2"

